S10P12A810-323 [fix] api path 수정 및 Token 적용