@@ -35,80 +35,80 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 @RequiredArgsConstructor
 public class CustomSecurityConfig {
 
-    private final APIUserDetailsService apiUserDetailsService;
-    private final JWTUtil jwtUtil;
+	private final APIUserDetailsService apiUserDetailsService;
+	private final JWTUtil jwtUtil;
 
-    @Bean
-    public SecurityFilterChain filterChain(final HttpSecurity http) throws Exception {
-        AuthenticationManagerBuilder authenticationManagerBuilder = http.getSharedObject(
-            AuthenticationManagerBuilder.class);
+	@Bean
+	public SecurityFilterChain filterChain(final HttpSecurity http) throws Exception {
+		AuthenticationManagerBuilder authenticationManagerBuilder = http.getSharedObject(
+			AuthenticationManagerBuilder.class);
 
-        authenticationManagerBuilder.userDetailsService(apiUserDetailsService);
-        AuthenticationManager authenticationManager = authenticationManagerBuilder.build();
+		authenticationManagerBuilder.userDetailsService(apiUserDetailsService);
+		AuthenticationManager authenticationManager = authenticationManagerBuilder.build();
 
-        http
-            .authenticationManager(authenticationManager)
-            .addFilterBefore(tokenCheckFilter(jwtUtil, apiUserDetailsService),
-                UsernamePasswordAuthenticationFilter.class)
-            .csrf(AbstractHttpConfigurer::disable)
-            .sessionManagement((sessionManagement) ->
-                sessionManagement.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .cors(httpSecurityCorsConfigurer ->
-                httpSecurityCorsConfigurer.configurationSource(corsConfigurationSource()))
-            .authorizeHttpRequests(auth ->
-                auth.requestMatchers("/api/*/v0/**").permitAll()
-                    .requestMatchers("/api/*/v0").permitAll()
-                    .anyRequest().authenticated()
-            )
-            .oauth2Login(oauth2 ->
-                oauth2
-                    .authorizationEndpoint(authorization -> authorization
-                        .baseUri("/login/oauth2/authorization")
-                    )
-                    .successHandler(authenticationSuccessHandler())
-            );
+		http
+			.authenticationManager(authenticationManager)
+			.addFilterBefore(tokenCheckFilter(jwtUtil, apiUserDetailsService),
+				UsernamePasswordAuthenticationFilter.class)
+			.csrf(AbstractHttpConfigurer::disable)
+			.sessionManagement((sessionManagement) ->
+				sessionManagement.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+			.cors(httpSecurityCorsConfigurer ->
+				httpSecurityCorsConfigurer.configurationSource(corsConfigurationSource()))
+			.authorizeHttpRequests(auth ->
+				auth.requestMatchers("/api/*/v0/**").permitAll()
+					.requestMatchers("/api/*/v0").permitAll()
+					.anyRequest().authenticated()
+			)
+			.oauth2Login(oauth2 ->
+				oauth2
+					.authorizationEndpoint(authorization -> authorization
+						.baseUri("/login/oauth2/authorization")
+					)
+					.successHandler(authenticationSuccessHandler())
+			);
 
-        return http.build();
-    }
+		return http.build();
+	}
 
-    @Bean
-    public WebSecurityCustomizer webSecurityCustomizer() {      // TODO : 추후 프론트로 Resourse가 전부 넘어가면 삭제해도 될지도?
-        return web -> {
-            web.ignoring().requestMatchers(PathRequest.toStaticResources().atCommonLocations());
-        };
-    }
+	@Bean
+	public WebSecurityCustomizer webSecurityCustomizer() {      // TODO : 추후 프론트로 Resourse가 전부 넘어가면 삭제해도 될지도?
+		return web -> {
+			web.ignoring().requestMatchers(PathRequest.toStaticResources().atCommonLocations());
+		};
+	}
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*"));       // 모든 출처에서 오는 요청 허용
-        configuration.setAllowedMethods(
-            Arrays.asList("HEAD", "GET", "POST", "PUT", "DELETE"));     // 허용할 HTTP 메소드
-        configuration.setAllowedHeaders(Arrays.asList(      // 요청 헤더 중 허용할 헤더 설정
-            "Authorization",
-            "Cache-Control",
-            "Content-Type"
-        ));
-        configuration.setAllowCredentials(true);    // 인증 정보(cookies, headers) 등을 포함한 요청을 허용하도록 설정
+	@Bean
+	public CorsConfigurationSource corsConfigurationSource() {
+		CorsConfiguration configuration = new CorsConfiguration();
+		configuration.setAllowedOriginPatterns(List.of("*"));       // 모든 출처에서 오는 요청 허용
+		configuration.setAllowedMethods(
+			Arrays.asList("HEAD", "GET", "POST", "PUT", "DELETE"));     // 허용할 HTTP 메소드
+		configuration.setAllowedHeaders(Arrays.asList(      // 요청 헤더 중 허용할 헤더 설정
+			"Authorization",
+			"Cache-Control",
+			"Content-Type"
+		));
+		configuration.setAllowCredentials(true);    // 인증 정보(cookies, headers) 등을 포함한 요청을 허용하도록 설정
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();     // URL 기반의 CORS 설정 소스 객체 생성
-        source.registerCorsConfiguration("/**", configuration);     // 모든 url 패턴에 대해 CORS 설정 적용
-        return source;
-    }
+		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();     // URL 기반의 CORS 설정 소스 객체 생성
+		source.registerCorsConfiguration("/**", configuration);     // 모든 url 패턴에 대해 CORS 설정 적용
+		return source;
+	}
 
-    @Bean
-    public TokenCheckFilter tokenCheckFilter(JWTUtil jwtUtil,
-        APIUserDetailsService apiUserDetailsService) {
-        return new TokenCheckFilter(apiUserDetailsService, jwtUtil);
-    }
+	@Bean
+	public TokenCheckFilter tokenCheckFilter(JWTUtil jwtUtil,
+		APIUserDetailsService apiUserDetailsService) {
+		return new TokenCheckFilter(apiUserDetailsService, jwtUtil);
+	}
 
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
+	@Bean
+	public PasswordEncoder passwordEncoder() {
+		return new BCryptPasswordEncoder();
+	}
 
-    @Bean
-    public AuthenticationSuccessHandler authenticationSuccessHandler() {
-        return new CustomSocialLoginSuccessHandler(jwtUtil);
-    }
+	@Bean
+	public AuthenticationSuccessHandler authenticationSuccessHandler() {
+		return new CustomSocialLoginSuccessHandler(jwtUtil);
+	}
 }
